--- a/Repaso Librerias Cientificas.ipynb
+++ b/Repaso Librerias Cientificas.ipynb
@@ -499,22 +499,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Scipy"
    ]
   },
@@ -524,32 +508,94 @@
     "collapsed": true
    },
    "source": [
-    "Scipy ofrece una magnitud de algoritmos trabajando sobre los arrays de NumPy. "
+    "Scipy ofrece una magnitud de algoritmos trabajando sobre los arrays de NumPy. \n",
+    "En Scipy podemos encontrar librerias para la manipulacion de matrices, algebra lineal, optimizacion, clustering, operaciones espaciales, o incluso Transformacion Rapida de Fourier (FFT)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.17.1\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy, numpy\n",
+    "print(scipy.version.full_version)\n",
+    "print(scipy.dot is numpy.dot)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scikit Learn"
+    "##### cluster \n",
+    "Clustering Jerarquico (cluster.hierarchy) (!)\n",
+    "Vector quantization / K-Means (cluster.vq)\n",
+    "\n",
+    "###### constants \n",
+    "Metodos de conversion para constantes matematicas y fisicas.\n",
+    "\n",
+    "##### fftpack\n",
+    "Algoritmos para transformada de fourier discreta\n",
+    "\n",
+    "###### integrate\n",
+    "Rutinas de integracion\n",
+    "\n",
+    "###### interpolate\n",
+    "Interpolacion (lineal, cubica, y mas) (!)\n",
+    "\n",
+    "###### io\n",
+    "Input y Output de la data\n",
+    "\n",
+    "###### linalg\n",
+    "Rutinas de algebra lineal usando la librerias BLAS y LAPACK optimizadas\n",
+    "\n",
+    "###### maxentropy\n",
+    "Funciones para encontrar la maxima entropia de los modelos\n",
+    "\n",
+    "###### ndimage\n",
+    "Paquete para imagenes n-dimensionales\n",
+    "\n",
+    "###### odr\n",
+    "Orthogonal distance regression\n",
+    "\n",
+    "###### optimize\n",
+    "Optimizacion (encontrar minima y raices)\n",
+    "\n",
+    "##### signal\n",
+    "Procesamiento de senales (!)\n",
+    "\n",
+    "##### sparse\n",
+    "Matrices de esparcion\n",
+    "\n",
+    "##### spatial\n",
+    "Estructuras de datos y algoritmos espaciales\n",
+    "\n",
+    "##### special\n",
+    "Funciones matematicas como Bessel o Jacobiano\n",
+    "\n",
+    "##### stats\n",
+    "Toolkit para estadisticas (!)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
