--- a/02_Clasificacion/Clasificacion.ipynb
+++ b/02_Clasificacion/Clasificacion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aprendiendo como Clasificar con Ejemplos Real-world"
+    "### Aprendiendo como clasidicar con Ejemplos Real-world"
    ]
   },
   {
